--- a/happy-travels-agency.html
+++ b/happy-travels-agency.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="css/styles.css" rel="stylesheet" type="text/css"
         <title>Happy Travel Agency Profile</title>
     </head>
     <body>
@@ -28,9 +29,11 @@
             <li>Kakamega Forest- The Crying Stone</li>
             <li>Kit Mikayi</li>
             <li>Ruma National Park</li>
+            <img src="images/ruma.jpg" alt="Ruma National Park">
             <li>Simbi Nyaima</li>
             <li>Kodera Forest</li>
             <li>Osienala</li>
-        </ol>
+            <img src="images/osienala.jpg" alt="Osienala Park in Kisumu">
+        </ol> 
     </body>
 </html>
