--- a/happy-travels-agency.html
+++ b/happy-travels-agency.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <link href="css/styles.css" rel="stylesheet" type="text/css"
-        <title>Happy Travel Agency Profile</title>
+        <title><strong>Happy Travel Agency Profile</strong></title>
     </head>
     <body>
-        <h1>About the Travel Agency</h1>
-        <p>Happy Travel Agency is a company based in the western part of Kenya. Th firm has an employee base of 124 workers.Also, the firm has two branch offices located in Kisumu and Homabay town.</p>
-        <h2>Services offered</h2>
-        <p>The travel agency offers the following services:</p>
+        <h1 class="intro">About the Travel Agency</h1>
+        <p class="intro">Happy Travel Agency is a company based in the western part of Kenya. Th firm has an employee base of 124 workers.Also, the firm has two branch offices located in Kisumu and Homabay town.</p>
+        <h2 class="head">Services offered</h2>
+        <p class="head">The travel agency offers the following services:</p>
         <ol>
             <li>Accommodation services</li>
             <li>Nature walks</li>
