change name of happy-travel-agency.html file to index.html.

--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
         <ol>
             <li>Kakamega Forest- The Crying Stone</li>
             <li>Kit Mikayi</li>
-            <li>Ruma National Park</li>
+            <li class="tropical">Ruma National Park</li>
             <img src="images/ruma.jpg" alt="Ruma National Park">
-            <li>Simbi Nyaima</li>
+            <li class="popular">Simbi Nyaima</li>
             <li>Kodera Forest</li>
             <li>Osienala</li>
             <img src="images/osienala.jpg" alt="Osienala Park in Kisumu">
         </ol> 
+
     </body>
 </html>
