--- a/happy-travels-agency.html
+++ b/happy-travels-agency.html
@@ -16,7 +16,7 @@
             <li>Park Visits</li>
         </ol>
         <h2>Prices</h2>
-        <p>We offer the best accomodation services in the region. We have put up the best hotel infrastructure that give the customers a feeling of relaxation. our customer service teams are composed of well-trained individuals geared and ready to serve you. our prices range as follows:</p>
+        <p class="line1">We offer the best accomodation services in the region. We have put up the best hotel infrastructure that give the customers a feeling of relaxation. our customer service teams are composed of well-trained individuals geared and ready to serve you. our prices range as follows:</p>
         <ol>
             <li>Bed fee- KES. 4500</li>
             <li>Breakfast- free</li>
@@ -24,7 +24,7 @@
             <li>Beer- KES. 900</li>
         </ol>
         <h3>Travel Destinations</h3>
-        <p>The following are the travel destinations that we visit:</p>
+        <p id="line2">The following are the travel destinations that we visit:</p>
         <ol>
             <li>Kakamega Forest- The Crying Stone</li>
             <li>Kit Mikayi</li>
