--- a/happy-travels-agency.html
+++ b/happy-travels-agency.html
@@ -35,6 +35,13 @@
             <li>Osienala</li>
             <img src="images/osienala.jpg" alt="Osienala Park in Kisumu">
         </ol> 
+        <h4>Contact Info</h4>
+        <p>Please reach us through:</p>
+        <ol>
+            <li>Tel: 07354446</li>
+            <li>Email: happyagencies@gmail.com</li>
+            <li>Twitter: @happy_agencies</li>
+        </ol>
 
     </body>
 </html>
